--- a/src/assets/css/page-one.css
+++ b/src/assets/css/page-one.css
@@ -8,7 +8,7 @@
   --clr-secondary-light: rgba(6, 214, 160,.22);
   --clr-tertiary-light: rgba(32, 37, 64, .22)
 }
-.gather{
+.page-one{
   font-family: 'DM Sans', sans-serif;
 }
 button:focus{
